--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
   "scripts": {
     "build": "tsc -p .",
     "start": "node .",
-    "devstart": "nodemon --watch src --ext ts,json --exec \"npm run build && node .\""
+    "devstart": "nodemon --ext ts,json --exec \"npm run build && node .\""
   },
   "dependencies": {
+    "argon2": "^0.28.3",
     "dotenv": "^10.0.0",
     "fastify": "^3.24.0",
-    "fastify-autoload": "^3.9.0"
+    "fastify-autoload": "^3.9.0",
+    "mongoose": "^6.0.13",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "^16.11.10",
+    "@types/uuid": "^8.3.3",
     "nodemon": "^2.0.15",
     "typescript": "^4.5.2"
   }
