--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^10.0.0",
     "fastify": "^3.24.0",
     "fastify-autoload": "^3.9.0",
+    "joi": "^17.4.2",
     "mongoose": "^6.0.13",
     "uuid": "^8.3.2"
   },
