--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "GPL-3.0-only",
   "private": false,
   "scripts": {
-    "build": "tsc -p .",
+    "build": "rimraf dist && tsc -p .",
     "start": "node .",
     "devstart": "nodemon --ext ts,json --exec \"npm run build && node .\""
   },
@@ -24,6 +24,7 @@
     "@types/node": "^16.11.10",
     "@types/uuid": "^8.3.3",
     "nodemon": "^2.0.15",
+    "rimraf": "^3.0.2",
     "typescript": "^4.5.2"
   }
 }
